--- a/common/pom.xml
+++ b/common/pom.xml
@@ -104,6 +104,22 @@
             <artifactId>guava</artifactId>
             <version>${caffeine.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba.nacos</groupId>
+            <artifactId>nacos-client</artifactId>
+          <!-- // <version>2.0.4</version>-->
+            <version>1.4.3</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.ctrip.framework.apollo/apollo-client -->
+        <dependency>
+            <groupId>com.ctrip.framework.apollo</groupId>
+            <artifactId>apollo-client</artifactId>
+            <version>1.9.2</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
