--- a/worker/src/main/resources/application.yml
+++ b/worker/src/main/resources/application.yml
@@ -6,7 +6,7 @@ queue:
   maxSize: ${queueSize:16384}
   preDbSize: ${preDbSize:10000}
 #etcd的地址，如有多个用逗号分隔
-config:
+jConfig:
   mdc: ${mdc:default}
   server: ${etcdServer:http://127.0.0.1:2379} #etcd的地址，重要！！！
   workerPath: ${workerPath:default} #该worker放到哪个path下，譬如放/app1下，则该worker只能被app1使用，不会为其他client提供服务
