--- a/worker/pom.xml
+++ b/worker/pom.xml
@@ -22,6 +22,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.jd.platfrom.jlog</groupId>
+            <artifactId>config-zk</artifactId>
+            <version>1.4-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
