--- a/client/pom.xml
+++ b/client/pom.xml
@@ -18,12 +18,29 @@
             <version>1.4-SNAPSHOT</version>
         </dependency>
 
-        <dependency>
+       <!-- <dependency>
             <groupId>com.jd.platfrom.jlog</groupId>
             <artifactId>config-zk</artifactId>
             <version>1.4-SNAPSHOT</version>
-        </dependency>
+        </dependency>-->
+        <!--
+        <dependency>
+            <groupId>com.jd.platfrom.jlog</groupId>
+            <artifactId>config-nacos</artifactId>
+            <version>1.4-SNAPSHOT</version>
+        </dependency>-->
 
+     <!-- <dependency>
+            <groupId>com.jd.platfrom.jlog</groupId>
+            <artifactId>config-etcd</artifactId>
+            <version>1.4-SNAPSHOT</version>
+        </dependency>-->
+
+        <dependency>
+            <groupId>com.jd.platfrom.jlog</groupId>
+            <artifactId>config-apollo</artifactId>
+            <version>1.4-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
