--- a/config/config-apollo/pom.xml
+++ b/config/config-apollo/pom.xml
@@ -15,12 +15,6 @@
             <groupId>com.jd.platfrom.jlog</groupId>
             <artifactId>config-core</artifactId>
             <version>1.4-SNAPSHOT</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>slf4j-api</artifactId>
-                    <groupId>org.slf4j</groupId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.ctrip.framework.apollo</groupId>
@@ -31,10 +25,10 @@
                     <artifactId>slf4j-api</artifactId>
                     <groupId>org.slf4j</groupId>
                 </exclusion>
-                <exclusion>
+               <!-- <exclusion>
                     <artifactId>guava</artifactId>
                     <groupId>com.google.guava</groupId>
-                </exclusion>
+                </exclusion>-->
             </exclusions>
         </dependency>
     </dependencies>
