--- a/client/pom.xml
+++ b/client/pom.xml
@@ -35,10 +35,15 @@
             <artifactId>config-etcd</artifactId>
             <version>1.4-SNAPSHOT</version>
         </dependency>-->
-
+       <!--
         <dependency>
             <groupId>com.jd.platfrom.jlog</groupId>
             <artifactId>config-apollo</artifactId>
+            <version>1.4-SNAPSHOT</version>
+        </dependency>-->
+        <dependency>
+            <groupId>com.jd.platfrom.jlog</groupId>
+            <artifactId>config-core</artifactId>
             <version>1.4-SNAPSHOT</version>
         </dependency>
         <dependency>
