--- a/config/config-core/pom.xml
+++ b/config/config-core/pom.xml
@@ -16,6 +16,11 @@
             <artifactId>common</artifactId>
             <version>1.4-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.28</version>
+        </dependency>
     </dependencies>
 
 </project>
