--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <module>clientlog4j2</module>
         <module>clientlogback</module>
         <module>Dashboard</module>
-        <module>clientdemo</module>
+        <module>example</module>
         <module>config</module>
     </modules>
 
