区分处理器

--- a/example/src/main/resources/bakjLog.properties
+++ b/example/src/main/resources/bakjLog.properties
@@ -1,6 +1,9 @@
 server.port=8085
-tag-config.reqTags[0]="AA"
-tag-config.reqTags[1]="BB"
-tag-config.logTags[0]="CC"
-tag-config.logTags[1]="DD"
+tag-config.reqTags=["uid","url"]
+tag-config.logTags=["node","bizType"]
+tag-config.respTags=["errno","msg"]
+tag-config.regex=""
 tag-config.delimiter="|"
+tag-config.join="="
+tag-config.extract=41
+tag-config.compress=81
