--- a/example/src/main/resources/application.properties
+++ b/example/src/main/resources/application.properties
@@ -1,16 +1,10 @@
 server.port=8085
 
+tag-config.reqTags=["uid","url"]
+tag-config.logTags=["node","bizType"]
+tag-config.respTags=["errno","msg"]
+tag-config.regex=""
 tag-config.delimiter="|"
-
-tag-config.logConfig.limit=99
-
-tag-config.logConfig.cfg[0]="AA"
-tag-config.logConfig.cfg[1]="BB"
-tag-config.logConfig.aa[0]="CC"
-tag-config.logConfig.aa[1]="DD"
-
-
-tag-config.reqTags[0]="AA"
-tag-config.reqTags[1]="BB"
-tag-config.logTags[0]="CC"
-tag-config.logTags[1]="XSSX"
+tag-config.join="="
+tag-config.extract=41
+tag-config.compress=81
