区分处理器

--- a/example/src/main/resources/application.properties
+++ b/example/src/main/resources/application.properties
@@ -7,4 +7,7 @@ tag-config.regex=""
 tag-config.delimiter="|"
 tag-config.join="="
 tag-config.extract=41
-tag-config.compress=81
+
+compress=68
+limit=10000
+
