--- a/example/src/main/resources/application.properties
+++ b/example/src/main/resources/application.properties
@@ -1,13 +1,19 @@
 server.port=8085
 
-tag-config.reqTags=["uid","url"]
-tag-config.logTags=["node","bizType"]
-tag-config.respTags=["errno","msg"]
-tag-config.regex=""
-tag-config.delimiter="|"
-tag-config.join="="
+tag-config.reqTags[0]=uid
+tag-config.reqTags[1]=url
+
+tag-config.logTags[0]=node
+tag-config.logTags[1]=bizType
+
+tag-config.respTags[0]=errno
+tag-config.respTags[1]=msg
+tag-config.delimiter=|
+tag-config.join==
 tag-config.extract=41
 
 compress=68
-limit=10000
+threshold=10000
 
+workers[0]=1
+workers[1]=2
