--- a/example/src/main/resources/application.properties
+++ b/example/src/main/resources/application.properties
@@ -1,19 +1,6 @@
 server.port=8085
+serverAddr=101.42.242.201:2379
 
-tag-config.reqTags[0]=uid
-tag-config.reqTags[1]=url
-
-tag-config.logTags[0]=node
-tag-config.logTags[1]=bizType
-
-tag-config.respTags[0]=errno
-tag-config.respTags[1]=msg
-tag-config.delimiter=|
-tag-config.join==
-tag-config.extract=41
-
-compress=68
-threshold=10000
-
-workers[0]=1
-workers[1]=2
+apollo.meta=http://127.0.0.1:8080
+apollo.config-service=http://127.0.0.1:8080
+app.id=order
