--- a/worker/pom.xml
+++ b/worker/pom.xml
@@ -24,7 +24,7 @@
         </dependency>
         <dependency>
             <groupId>com.jd.platfrom.jlog</groupId>
-            <artifactId>config-zk</artifactId>
+            <artifactId>config-core</artifactId>
             <version>1.4-SNAPSHOT</version>
         </dependency>
 
