--- a/worker/src/main/resources/application.yml
+++ b/worker/src/main/resources/application.yml
@@ -5,17 +5,17 @@ thread:
 queue:
   maxSize: ${queueSize:16384}
   preDbSize: ${preDbSize:10000}
-#etcd的地址，如有多个用逗号分隔
-serverAddr: 101.42.242.201:2181
+
+#serverAddr: 101.42.242.201:2181
 
 server:
-  port: 8080
+  port: 8086
 #ck信息，自行修改
 clickhouse:
-  url: jdbc:clickhouse://${MYSQL_HOST:127.0.0.1}:${MYSQL_PORT:8123}
-  db: ${DB_NAME:test}
-  username: ${MYSQL_USER:test}
-  password: ${MYSQL_PASS:test}
+  url: jdbc:clickhouse://101.42.242.201:8123
+  db: default
+  username: default
+  password:
   batchSize: ${BATCH_SIZE:5000}
   poolSize: ${POOL_SIZE:5}
   insertInterval: ${INSERT_INTERVAL:5}
@@ -25,3 +25,6 @@ log:
   poolSize: ${POOL_SIZE:2}
   insertInterval: ${INSERT_INTERVAL:5}
   preDbSize: ${preDbSize:10000}
+
+
+workers: "['192.268.1.2:8888','192.268.1.3:8888']"
