压缩代码调整，自定义配置器编写，使用说明编写

--- a/example/src/main/resources/application.properties
+++ b/example/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 server.port=8085
 serverAddr=101.42.242.201:2379
 
+
+spring.redis.host=127.0.0.1
+
+
 apollo.meta=http://127.0.0.1:8080
 apollo.config-service=http://127.0.0.1:8080
 app.id=order
@@ -21,4 +25,3 @@ tag-config.extract=41
 compress=68
 threshold=10
 
-workers=[1,2,3]
