--- a/worker/src/main/resources/application.yml
+++ b/worker/src/main/resources/application.yml
@@ -6,13 +6,12 @@ queue:
   maxSize: ${queueSize:16384}
   preDbSize: ${preDbSize:10000}
 
-#serverAddr: 101.42.242.201:2181
 
 server:
   port: 8086
 #ck信息，自行修改
 clickhouse:
-  url: jdbc:clickhouse://101.42.242.201:8123
+  url: jdbc:clickhouse://127.0.0.1:8123
   db: default
   username: default
   password:
@@ -27,4 +26,5 @@ log:
   preDbSize: ${preDbSize:10000}
 
 
+# 此处仅供参考和测试
 workers: "['192.268.1.2:8888','192.268.1.3:8888']"
