--- a/example/src/main/resources/application.properties
+++ b/example/src/main/resources/application.properties
@@ -9,6 +9,10 @@ apollo.meta=http://127.0.0.1:8080
 apollo.config-service=http://127.0.0.1:8080
 app.id=order
 
+#设置通讯方式（单播或者多播），不设置则为单播（默认）
+#单播为true，多播为false
+#send-mode.unicast=true
+
 
 tag-config.reqTags[0]=uid
 tag-config.reqTags[1]=url
@@ -24,4 +28,7 @@ tag-config.extract=41
 
 compress=68
 threshold=10
+
+#worker的地址
+#workers=['127.0.0.1:9999','127.0.0.1:10000']
 
